Внес атрибут alt

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
             <form action="#" class="header-search">
                 <input type="search" class="header-search__input" placeholder="Введите посиковую фразу">
-                <input type="image" class="header-search__button">
+                <input type="image" alt="click" class="header-search__button">
             </form>
         </div>
         <a href="" class="header-basket__link">
