--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script async src="maps.js"></script>
+    <script async src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&load=Geolink"
+            type="text/javascript"></script>
 </head>
 <body>
 <header class="header">
@@ -357,9 +358,9 @@
                     <address class="header-contacts__info"><a href="mailto:info@nalabuten.ah" class="header-contacts__link">info@nalabuten.ah</a></address>
                 </li>
                 <li class="header-contacts__item"><img src="#" alt="mailto" class="header-contacts__icon">
-                    <address class="header-contacts__info"><a href="#" class="header-contacts__link__map">Адрес: <span class="ymaps-geolink">
+                    <address class="header-contacts__info">Адрес: <span class="ymaps-geolink">
    Москва, ул. Крылатские холмы, 26
-</span></a></address>
+</span></address>
                 </li>
             </ul>
         </div>
