Убрал слово адрес из за того, что в яндекс картах есть метка

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     <address class="header-contacts__info"><a href="mailto:info@nalabuten.ah" class="header-contacts__link">info@nalabuten.ah</a></address>
                 </li>
                 <li class="header-contacts__item"><img src="#" alt="mailto" class="header-contacts__icon">
-                    <address class="header-contacts__info">Адрес: <span class="ymaps-geolink">
+                    <address class="header-contacts__info"><span class="ymaps-geolink">
    Москва, ул. Крылатские холмы, 26
 </span></address>
                 </li>
