Передлал left-menu

--- a/index.html
+++ b/index.html
@@ -257,56 +257,56 @@
 <aside class="aside">
     <nav class="left-menu">
         <h4 class="left-menu__title">Категории</h4>
-        <ul class="left-menu-items">
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="вечерние" class="left-menu-items__icon">
-                    Вечерние
-                </a>
-            </li>
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="свадебные" class="left-menu-items__icon">
-                    Свадебные
-                </a>
-            </li>
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="бальные" class="left-menu-items__icon">
-                    Бальные
-                </a>
-            </li>
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="повседневные" class="left-menu-items__icon">
-                    Повседневные
-                </a>
-            </li>
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="особенные" class="left-menu-items__icon">
-                    Особенные
-                </a>
-            </li>
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="обыкновенные" class="left-menu-items__icon">
-                    Обыкновенные
-                </a>
-            </li>
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="оригинальные" class="left-menu-items__icon">
-                    Оригинальные
-                </a>
-            </li>
-            <li class="left-menu-items__item">
-                <a href="#" class="left-menu-items__link">
-                    <img src="#" alt="космические" class="left-menu-items__icon">
-                    Космические
-                </a>
-            </li>
-        </ul>
+        <div class="left-menu-items">
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Вечерние</span>
+            </a>
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Свадебные</span>
+            </a>
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Бальные</span>
+            </a>
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Повседневные</span>
+            </a>
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Особенные</span>
+            </a>
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Обыкновенные</span>
+            </a>
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Оригинальные</span>
+            </a>
+            <a href="#" class="left-menu-items__link">
+                <svg class="icon icon-item" role="presentation">
+                    <use xlink:href="#"></use>
+                </svg>
+                <span class="left-menu-items__item">Космические</span>
+            </a>
+        </div>
     </nav>
 
     <div class="adverts-block">
@@ -322,6 +322,7 @@
         </div>
     </div>
 </aside>
+
 <footer class="footer">
     <div class="footer-top">
         <div class="header-logo">
@@ -371,7 +372,6 @@
         </small>
     </div>
 </footer>
-
 
 </body>
 </html>
