--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script async src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&load=Geolink"
-            type="text/javascript"></script>
+    <script async src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&load=Geolink"></script>
+    <!--type="text/javascript"-->
 </head>
 <body>
 <header class="header">
