--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
                     <address class="header-contacts__info"><a href="mailto:info@nalabuten.ah" class="header-contacts__link">info@nalabuten.ah</a></address>
                 </li>
                 <li class="header-contacts__item"><img src="#" alt="mailto" class="header-contacts__icon">
-                    <address class="header-contacts__info"><a href="mailto:info@nalabuten.ah" class="header-contacts__link">Адрес: г.Москва Фантастический проезд д.234</a></address>
+                    <address class="header-contacts__info"><a href="[55.701648, 37.498644]" class="header-contacts__link">Адрес: г.Москва Фантастический проезд д.234</a></address>
                 </li>
                 <!--<li class="header-contacts__item"><img src="#" alt="mailto" class="header-contacts__icon">
                     <address class="header-contacts__info"><span class="ymaps-geolink">
